--- a/temperatura.ipynb
+++ b/temperatura.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87996,7 +87996,7 @@
        "1997  08221099999,08224099999,C1784,LEMD,LEVS,082260...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88005,13 +88005,13 @@
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', None)  # Muestra todas las filas\n",
     "pd.set_option('display.max_columns', None)  # Muestra todas las columnas\n",
-    "df = pd.read_csv(\"Madrid.csv\")\n",
+    "df = pd.read_csv(\"Madrid 2022-02-08 to 2024-11-01.csv\")\n",
     "\n",
     "#Junto el csv con \"madrid 2019-04-08 to 2022-01-01.csv\"\n",
     "df2 = pd.read_csv(\"madrid 2019-04-08 to 2022-01-01.csv\")\n",
     "df = pd.concat([df, df2], ignore_index=True)\n",
     "#Ordeno por fecha\n",
-    "df = df.sort_values(by='datetime', ascending=True)\n",
+    "df = df.sort_values(by='datetime', ascending=True)wrwrsr \n",
     "df.reset_index(drop=True, inplace=True)\n",
     "df\n",
     "\n"
