--- a/temperatura.ipynb
+++ b/temperatura.ipynb
@@ -88011,7 +88011,7 @@
     "df2 = pd.read_csv(\"madrid 2019-04-08 to 2022-01-01.csv\")\n",
     "df = pd.concat([df, df2], ignore_index=True)\n",
     "#Ordeno por fecha\n",
-    "df = df.sort_values(by='datetime', ascending=True)wrwrsr \n",
+    "df = df.sort_values(by='datetime', ascending=True) \n",
     "df.reset_index(drop=True, inplace=True)\n",
     "df\n",
     "\n"
