--- a/temperatura.ipynb
+++ b/temperatura.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "uvindex              0.894801  1.000000  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,10 +638,12 @@
     "from scipy.stats import zscore\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "# Muestra todas las filas\n",
     "#pd.set_option('display.max_rows', None)  \n",
     "#pd.set_option('display.max_columns', None)  \n",
     "df = pd.read_csv(\"Madrid 2022-02-08 to 2024-11-01.csv\")\n",
+    "\n",
     "\n",
     "#Juntamos el csv con \"madrid 2019-04-08 to 2022-01-01.csv\"\n",
     "df2 = pd.read_csv(\"madrid 2019-04-08 to 2022-01-01.csv\")\n",
@@ -673,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1026,49 +1028,49 @@
      "text": [
       "Valores atípicos positivos detectados:\n",
       " Empty DataFrame\n",
-      "Columns: [datetime, tempmax, tempmin, temp, feelslikemax, feelslikemin, feelslike, dew, humidity, precip, precipprob, precipcover, preciptype, snow, snowdepth, windgust, windspeed, winddir, sealevelpressure, cloudcover, visibility, solarradiation, solarenergy, uvindex, severerisk, sunrise, sunset, moonphase, conditions, description, icon, stations, year, z_score, valores_winsor, icono numero]\n",
+      "Columns: [datetime, tempmax, tempmin, temp, feelslikemax, feelslikemin, feelslike, dew, humidity, precip, precipprob, precipcover, preciptype, snow, snowdepth, windgust, windspeed, winddir, sealevelpressure, cloudcover, visibility, solarradiation, solarenergy, uvindex, severerisk, sunrise, sunset, moonphase, conditions, description, icon, stations, year, z_score, valores_winsor]\n",
       "Index: []\n",
       "\n",
-      "[0 rows x 36 columns]\n",
+      "[0 rows x 35 columns]\n",
       "Valores atípicos negativos detectados:\n",
       "       datetime  tempmax  tempmin  temp  feelslikemax  feelslikemin  feelslike  \\\n",
       "645 2021-01-12      2.0     -9.2  -3.5           2.0          -9.2       -3.6   \n",
       "646 2021-01-13      6.5     -8.8  -2.2           6.5          -8.8       -2.3   \n",
       "\n",
-      "     dew  humidity  precip  ...               sunset  moonphase conditions  \\\n",
-      "645 -3.7      79.3     0.0  ...  2021-01-12T18:09:40       0.97      Clear   \n",
-      "646 -3.7      77.3     0.0  ...  2021-01-13T18:10:45       0.00      Clear   \n",
+      "     dew  humidity  precip  ...              sunrise               sunset  \\\n",
+      "645 -3.7      79.3     0.0  ...  2021-01-12T08:36:59  2021-01-12T18:09:40   \n",
+      "646 -3.7      77.3     0.0  ...  2021-01-13T08:36:40  2021-01-13T18:10:45   \n",
       "\n",
-      "                              description       icon  \\\n",
-      "645  Clear conditions throughout the day.  clear-day   \n",
-      "646  Clear conditions throughout the day.  clear-day   \n",
+      "    moonphase  conditions                           description       icon  \\\n",
+      "645      0.97       Clear  Clear conditions throughout the day.  clear-day   \n",
+      "646      0.00       Clear  Clear conditions throughout the day.  clear-day   \n",
       "\n",
       "                                              stations  year   z_score  \\\n",
       "645  08221099999,08224099999,LEMD,LEVS,08226099999,...  2021 -3.070764   \n",
       "646  08221099999,08224099999,LEMD,LEVS,08226099999,...  2021 -3.010761   \n",
       "\n",
-      "     valores_winsor  icono numero  \n",
-      "645            -3.7             0  \n",
-      "646            -3.7             0  \n",
+      "     valores_winsor  \n",
+      "645            -3.7  \n",
+      "646            -3.7  \n",
       "\n",
-      "[2 rows x 36 columns]\n",
+      "[2 rows x 35 columns]\n",
       "Outliers encontrados:\n",
       "       datetime  tempmax  tempmin  temp  feelslikemax  feelslikemin  feelslike  \\\n",
       "645 2021-01-12      2.0     -9.2  -3.5           2.0          -9.2       -3.6   \n",
       "\n",
-      "     dew  humidity  precip  ...               sunset  moonphase conditions  \\\n",
-      "645 -3.7      79.3     0.0  ...  2021-01-12T18:09:40       0.97      Clear   \n",
+      "     dew  humidity  precip  ...              sunrise               sunset  \\\n",
+      "645 -3.7      79.3     0.0  ...  2021-01-12T08:36:59  2021-01-12T18:09:40   \n",
       "\n",
-      "                              description       icon  \\\n",
-      "645  Clear conditions throughout the day.  clear-day   \n",
+      "    moonphase  conditions                           description       icon  \\\n",
+      "645      0.97       Clear  Clear conditions throughout the day.  clear-day   \n",
       "\n",
       "                                              stations  year   z_score  \\\n",
       "645  08221099999,08224099999,LEMD,LEVS,08226099999,...  2021 -3.070764   \n",
       "\n",
-      "     valores_winsor  icono numero  \n",
-      "645            -3.7             0  \n",
+      "     valores_winsor  \n",
+      "645            -3.7  \n",
       "\n",
-      "[1 rows x 36 columns]\n"
+      "[1 rows x 35 columns]\n"
      ]
     },
     {
@@ -1159,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1560,7 @@
        "[1998 rows x 36 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
