--- a/temperatura.ipynb
+++ b/temperatura.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1442,8 +1442,8 @@
       "Dep. Variable:     valores_winsor_dew   R-squared:                       0.504\n",
       "Model:                            OLS   Adj. R-squared:                  0.504\n",
       "Method:                 Least Squares   F-statistic:                     1654.\n",
-      "Date:                Thu, 27 Feb 2025   Prob (F-statistic):          4.24e-250\n",
-      "Time:                        13:39:24   Log-Likelihood:                -4163.8\n",
+      "Date:                Mon, 03 Mar 2025   Prob (F-statistic):          4.24e-250\n",
+      "Time:                        18:53:36   Log-Likelihood:                -4163.8\n",
       "No. Observations:                1628   AIC:                             8332.\n",
       "Df Residuals:                    1626   BIC:                             8342.\n",
       "Df Model:                           1                                         \n",
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1548,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1861,8 +1861,8 @@
       "Dep. Variable:         solarradiation   R-squared:                       1.000\n",
       "Model:                            OLS   Adj. R-squared:                  1.000\n",
       "Method:                 Least Squares   F-statistic:                 8.920e+06\n",
-      "Date:                Thu, 27 Feb 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        13:39:26   Log-Likelihood:                -2710.4\n",
+      "Date:                Mon, 03 Mar 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        18:53:37   Log-Likelihood:                -2710.4\n",
       "No. Observations:                1628   AIC:                             5425.\n",
       "Df Residuals:                    1626   BIC:                             5436.\n",
       "Df Model:                           1                                         \n",
@@ -1946,21 +1946,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicción: Si hay una energía solar de 1.00 la radiación solar será 11.58.\n"
+      "Predicción: Si hay una energía solar de 13.00 la radiación solar será 150.48.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\lalos\\OneDrive\\Escritorio\\proyecto temperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "c:\\Users\\ia\\Desktop\\TrabajoTemperatura\\.venv\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1971,7 +1971,7 @@
     "    prediccion = modelo2.predict([[solarenergy]])[0]\n",
     "    print(f\"Predicción: Si hay una energía solar de {solarenergy:.2f} la radiación solar será {prediccion:.2f}.\")\n",
     "\n",
-    "predecir_progresion(1)"
+    "predecir_progresion(13)"
    ]
   }
  ],
