--- a/temperatura.ipynb
+++ b/temperatura.ipynb
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,8 @@
     "    prediccion = modelo2.predict([[solarenergy]])[0]\n",
     "    print(f\"Predicción: Si hay una energía solar de {solarenergy:.2f} la radiación solar será {prediccion:.2f}.\")\n",
     "\n",
-    "predecir_progresion(13)"
+    "predecir_progresion(13)\n",
+    "\n"
    ]
   }
  ],
