--- a/temperaturamultiple.ipynb
+++ b/temperaturamultiple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
        "[27 rows x 27 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1720,8 +1720,7 @@
       "MSE (Error Cuadrático Medio): 1.0099\n",
       "RMSE (Raíz del Error Cuadrático Medio): 1.0050\n",
       "R² (Coeficiente de Determinación): 0.9826\n",
-      "Predicción de temperatura: 16.36 °C\n",
-      "R2: 0.9826229025027156\n"
+      "Predicción: Si hay datos (-0.3, 49.7, 0, 0, 0, 0, 0, 24.8, 33.1, 11.6, 1029.6, 0.8, 18.1, 6, 0.25, 8, 2) la  temperatura sera 11.225480490282067.\n"
      ]
     },
     {
@@ -1817,9 +1816,9 @@
     "def predecir_progresion(dew, humidity, precip, precipprob, precipcover, snow, snowdepth, windgust, winddir, windspeed, sealevelpressure, cloudcover, visibility, uvindex, moonphase, day, month):\n",
     "    prediccion = modelo.predict([[dew, humidity, precip, precipprob, precipcover, snow, snowdepth, windgust, winddir, windspeed, sealevelpressure, cloudcover, visibility, uvindex, moonphase, day, month\n",
     "]])[0]\n",
-    "    print(f\"Predicción: Si hay una energía solar de {dew, humidity, precip, precipprob, precipcover, snow, snowdepth, windgust, winddir, windspeed, sealevelpressure, cloudcover, visibility, uvindex, moonphase, day, month:.2f} la radiación solar será {prediccion:.2f}.\")\n",
+    "    print(f\"Predicción: Si hay datos {dew, humidity, precip, precipprob, precipcover, snow, snowdepth, windgust, winddir, windspeed, sealevelpressure, cloudcover, visibility, uvindex, moonphase, day, month} la  temperatura sera {prediccion}.\")\n",
     "\n",
-    "predecir_progresion(13)\n",
+    "predecir_progresion(-0.3,49.7,0,0,0,0,0,24.8,33.1,11.6,1029.6,0.8,18.1,6,0.25,8,2)\n",
     "\n",
     "\n",
     "\n"
