--- a/arboldecisionTemperatura.ipynb
+++ b/arboldecisionTemperatura.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,16 +36,8 @@
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.calibration import LabelEncoder\n",
-    "from sklearn.discriminant_analysis import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay, classification_report\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, ConfusionMatrixDisplay\n",
-    "from imblearn.over_sampling import RandomOverSampler, SMOTE\n",
-    "import numpy as np\n",
     "from sklearn import tree\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -114,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1f6bd4f3790>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x185a2979570>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -149,15 +141,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduce los datos del nuevo registro para predecir su clase:\n",
-      "Cloudy\n"
+      "Introduce los datos del nuevo registro para predecir su clase:\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[43mpredecir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre_caracteristica\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[6], line 17\u001b[0m, in \u001b[0;36mpredecir\u001b[1;34m(caracteristicas)\u001b[0m\n\u001b[0;32m     15\u001b[0m valores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m caracteristicas:\n\u001b[1;32m---> 17\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     valores\u001b[38;5;241m.\u001b[39mappend(r)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Crear un DataFrame de pandas con los mismos nombres de columna\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
    ],
