--- a/randomforestemperatura.ipynb
+++ b/randomforestemperatura.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,27 +14,13 @@
     }
    ],
    "source": [
-    "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.calibration import LabelEncoder\n",
-    "from sklearn.discriminant_analysis import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay, classification_report\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, ConfusionMatrixDisplay\n",
-    "from imblearn.over_sampling import RandomOverSampler, SMOTE\n",
-    "import numpy as np\n",
-    "from sklearn import tree\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.datasets import load_digits\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "df = pd.read_csv(\"Madrid 2022-02-08 to 2024-11-01.csv\")\n",
     "df2 = pd.read_csv(\"madrid 2019-04-08 to 2022-01-01.csv\")\n",
@@ -78,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1e24d89f1c0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2091cdfd360>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -115,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +118,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[43mpredecir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre_caracteristica\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[28], line 17\u001b[0m, in \u001b[0;36mpredecir\u001b[1;34m(caracteristicas)\u001b[0m\n\u001b[0;32m     15\u001b[0m valores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m caracteristicas:\n\u001b[1;32m---> 17\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     valores\u001b[38;5;241m.\u001b[39mappend(r)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Crear un DataFrame de pandas con los mismos nombres de columna\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[3], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[43mpredecir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre_caracteristica\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[3], line 17\u001b[0m, in \u001b[0;36mpredecir\u001b[1;34m(caracteristicas)\u001b[0m\n\u001b[0;32m     15\u001b[0m valores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m caracteristicas:\n\u001b[1;32m---> 17\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     valores\u001b[38;5;241m.\u001b[39mappend(r)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Crear un DataFrame de pandas con los mismos nombres de columna\u001b[39;00m\n",
       "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
