--- a/arboldecisionTemperatura.ipynb
+++ b/arboldecisionTemperatura.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un árbol de decisión es un modelo predictivo que se utiliza tanto para clasificación como para regresión. Se construye dividiendo recursivamente el conjunto de datos en función de las características de los datos.\n",
+    "En nuestro modelo, tenemos el mismo objetivo que en la regresión logística."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -137,6 +145,13 @@
     "\n",
     "# Matriz de confusión\n",
     "ConfusionMatrixDisplay.from_estimator(grid_search.best_estimator_, X_test, y_test, display_labels=[\"clear-day\", \"cloudy\", \"partly-cloudy-day\", \"rain\", \"snow\"],cmap=\"Blues\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como conclusión, podemos decir este modelo es capaz de predecir mejor que el de regresión logística."
    ]
   },
   {
