--- a/kmeans_temperatura.ipynb
+++ b/kmeans_temperatura.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "k-Means es un algoritmo de aprendizaje no supervisado que agrupa datos en k clústeres basándose en la similitud entre ellos. Funciona asignando puntos a los centroides más cercanos y ajustando estos centroides iterativamente hasta encontrar la mejor agrupación."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
