--- a/linealtemperatura.ipynb
+++ b/linealtemperatura.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nuestro conjunto de datos tratan de un conjunto de datos meteorlógicos de Madrid a lor largo del tiempo.\n",
+    "El primer modelo es una regresión lineal simple. Es un método que sirve para modelar la relación entre dos variables cuantitativas.\n",
+    "\n",
+    "En este caso, hemos probado dos diferentes variables objetivo. En el primero, nuestra variable objetivo era el rocio, y nuestra variable independiente era la temperatura mínima. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +813,6 @@
     "#Eliminamos la columna name debido a que todos los datos son de Madrid\n",
     "df.drop(\"name\", axis=1, inplace=True)\n",
     "\n",
-    "\n",
     "# Convertir la columna de fecha a tipo datetime\n",
     "df['datetime'] = pd.to_datetime(df['datetime'])\n",
     "\n",
@@ -1566,7 +1575,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hacemos un modelo con otras variables debido a que el modelo anterior no nos dio resultados satisfactorios."
+    "Como conclusión, podemos decir que, basandonos en el coeficiente de determinación, que con la temperatura mínima no somos capaces de crear un modelo que puediera predecir el rocio con precisión."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hacemos un modelo con otras variables debido a que el modelo anterior no nos dio resultados satisfactorios.\n",
+    "En este caso, utilizamos como variable objetivo la radiación solar y como variable indepenciente la energía solar. "
    ]
   },
   {
@@ -1973,6 +1990,13 @@
     "\n",
     "predecir_progresion(13)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como conclusión de este modelo, podemos decir que con los datos de energía solar, podemos predecir la radiación solar de manera precisa casi el 100 % de las veces. "
    ]
   }
  ],
