--- a/randomforestemperatura.ipynb
+++ b/randomforestemperatura.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un Random Forest (o Bosque Aleatorio) es un modelo de aprendizaje automático basado en árboles de decisión. En lugar de entrenar un solo árbol de decisión, entrena múltiples árboles y combina sus predicciones para obtener un resultado más preciso y robusto.\n",
+    "En nuestro modelo, tenemos el mismo objetivo que en la regresión logística y que el árbol de decisión."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +43,6 @@
     "labelencoder=LabelEncoder()\n",
     "df[\"icono numero\"]= labelencoder.fit_transform(df[\"icon\"])\n",
     "df\n",
-    "\n",
     "\n",
     "# Definir X (variables independientes)\n",
     "X = df.drop(columns=[\"name\",\"datetime\",\"sunrise\",\"sunset\", \"severerisk\", \"preciptype\", \"conditions\", \"description\", \"stations\", \"icon\", \"icono numero\"], axis=1)\n",
@@ -97,6 +104,13 @@
     "ConfusionMatrixDisplay.from_estimator(model, X_test, y_test, display_labels=[\"clear-day\", \"cloudy\", \"partly-cloudy-day\", \"rain\", \"snow\"],cmap=\"Blues\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como conclusión, este es un buen modelo que es ligeramente mejor que el de regresión logística pero peor que el árbol de decisión."
    ]
   },
   {
