--- a/temperaturamultiple.ipynb
+++ b/temperaturamultiple.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El segundo modelo se trata de una regresión lineal múltiple que extiende la regresión simple para modelar la relación entre una variable dependiente y varias variables independientes.\n",
+    "En este caso, nuestro objetivo es predecir la temperatura de Madrid con varias variables. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -938,8 +946,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A la hora de elegir las varaibles independientes, hemos descartado varias de ellas ya que empeoraban los resultados. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1048,6 @@
     "columnas_predictoras = [\"dew\",\"humidity\",\"precip\",\"precipprob\",\"precipcover\",\"snow\",\"snowdepth\",\"windgust\",\"winddir\",\"windspeed\",\"sealevelpressure\",\"cloudcover\",\"visibility\",\"uvindex\",\"moonphase\", \"day\", \"month\"]\n",
     "\n",
     "\n",
-    "\n",
     "X = df[columnas_predictoras]\n",
     "y = df[\"temp\"]\n",
     "\n",
@@ -1111,6 +1125,13 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como conclusión, podemos decir que nuestro modelo es capaz de predecir con precisión la temperatura de Madrid con mucha precisión."
    ]
   },
   {
