--- a/regresionlogistica.ipynb
+++ b/regresionlogistica.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La regresión logística es un modelo estadístico utilizado para problemas de clasificación, en los que la variable objetivo es categórica. A diferencia de la regresión lineal, que predice valores continuos, la regresión logística estima la probabilidad de que un evento ocurra.\n",
+    "En este caso, nuestra variable objetivo es \"icon\", que categoriza el tipo de dia que hace (nublado, soleado, lluvioso...), para ello utilizamos varias variables independientes. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -421,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -468,8 +476,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# Definir X (variables independientes)\n",
     "X = df.drop(columns=[\"name\",\"datetime\",\"sunrise\",\"sunset\", \"severerisk\", \"preciptype\", \"conditions\", \"description\", \"stations\", \"icon\", \"icono numero\"], axis=1)\n",
     "\n",
@@ -504,8 +510,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como conclusión, podemos decir que nuestro modelo es capaz de predecir con bastante precisión. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -513,18 +526,6 @@
      "output_type": "stream",
      "text": [
       "Introduce los datos del nuevo registro para predecir su clase:\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 37\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnow\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[43mpredecir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre_caracteristica\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[3], line 17\u001b[0m, in \u001b[0;36mpredecir\u001b[1;34m(caracteristicas)\u001b[0m\n\u001b[0;32m     15\u001b[0m valores \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m caracteristicas:\n\u001b[1;32m---> 17\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIntroduce \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43me\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     valores\u001b[38;5;241m.\u001b[39mappend(r)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Crear un DataFrame de pandas con los mismos nombres de columna\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
    ],
