--- a/linealtemperatura.ipynb
+++ b/linealtemperatura.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nuestro conjunto de datos tratan de un conjunto de datos meteorlógicos de Madrid a lor largo del tiempo.\n",
-    "El primer modelo es una regresión lineal simple. Es un método que sirve para modelar la relación entre dos variables cuantitativas.\n",
+    "Nuestro conjunto de datos son datos meteorológicos de Madrid a lo largo del tiempo. Hemos elegido este conjunto de datos porque es muy completo y tiene una gran cantidad de variables.\n",
     "\n",
-    "En este caso, hemos probado dos diferentes variables objetivo. En el primero, nuestra variable objetivo era el rocio, y nuestra variable independiente era la temperatura mínima. "
+    "El primer modelo es una regresión lineal simple. Es un método que sirve para modelar la relación entre dos variables cuantitativas. Nuestro objetivo en este modelo es predecir el rocío de cualquier dia basandonos en la temperatura mínima del dia.\n",
+    "\n",
+    "Nuestra variable objetivo es el rocio, y nuestra variable independiente es la temperatura mínima. Hemos elegido el rocío porque nos parecía interesante y se puede predecir con facilidad."
    ]
   },
   {
@@ -845,6 +846,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En primer lugar comprobamos si hay valores nulos o duplicados. En nuestro caso no hay."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -874,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +901,7 @@
     "plt.scatter(df[\"dew\"],df[\"tempmin\"])\n",
     "plt.xlabel(\"dew\")\n",
     "plt.ylabel(\"tempmin\")\n",
-    "plt.title(\"Relacion escarcha y temperatura minima\")\n",
+    "plt.title(\"Relacion rocío y temperatura minima\")\n",
     "plt.show()"
    ]
   },
@@ -929,6 +937,13 @@
     "\n",
     "# Mostrar gráfica\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aquí buscamos outliers y los eliminamos en caso de que haya."
    ]
   },
   {
@@ -1431,6 +1446,13 @@
     "\n",
     "# Mostrar gráfica\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entrenamos el modelo."
    ]
   },
   {
@@ -1996,7 +2018,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como conclusión de este modelo, podemos decir que con los datos de energía solar, podemos predecir la radiación solar de manera precisa casi el 100 % de las veces. "
+    "Como conclusión de este modelo, podemos decir que con los datos de energía solar, podemos predecir la radiación solar de manera precisa casi el 100 % de las veces. Esto es porque en este caso estas dos variables están muy relacionadas entre ellas."
    ]
   }
  ],
