--- a/regresionlogistica.ipynb
+++ b/regresionlogistica.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "La regresión logística es un modelo estadístico utilizado para problemas de clasificación, en los que la variable objetivo es categórica. A diferencia de la regresión lineal, que predice valores continuos, la regresión logística estima la probabilidad de que un evento ocurra.\n",
-    "En este caso, nuestra variable objetivo es \"icon\", que categoriza el tipo de dia que hace (nublado, soleado, lluvioso...), para ello utilizamos varias variables independientes. "
+    "En este caso, nuestra variable objetivo es \"icon\", que categoriza el tipo de dia que hace (nublado, soleado, lluvioso...), para ello utilizamos varias variables independientes. \n",
+    "\n",
+    "Nuestro objetivo en este modelo es descubrir si somos capaces de predecir el tipo de día que hace, basándonos en las variables independientes que tenemos."
    ]
   },
   {
