--- a/temperaturamultiple.ipynb
+++ b/temperaturamultiple.ipynb
@@ -949,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A la hora de elegir las varaibles independientes, hemos descartado varias de ellas ya que empeoraban los resultados. "
+    "A la hora de elegir las varaibles independientes, hemos descartado varias de ellas ya que empeoraban los resultados, y otras porque eran strings o fechas."
    ]
   },
   {
@@ -1131,7 +1131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como conclusión, podemos decir que nuestro modelo es capaz de predecir con precisión la temperatura de Madrid con mucha precisión."
+    "Como conclusión, podemos decir que nuestro modelo es capaz de predecir con precisión la temperatura de Madrid con mucha precisión. Esto es dabido a que tenemos muchas variables que nos ayudan a predecir la temperatura, como la humedad, precipitación...."
    ]
   },
   {
